# sqlz

./: .gitignore  LICENSE  NOTICE  README.md  example-table-sql.py  pyproject.toml
sql-py/: main.py
sqlz/: __init__.py  main.py  table.py  view.py
