[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlz"
version = "0.0.4"
description = "A RDBMS Using Python"
readme = "README.md"
authors = [
  { name="Ashin Jiyo", email="ashinjiyo639@gmail.com" }
]
license = "Apache-2.0"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/Ashin-Jiyo/sqlz"